--- a/room-details.html
+++ b/room-details.html
@@ -196,59 +196,57 @@
   </div>
 
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s">
-    <div class="container pb-5">
-        <div class="row g-5">
+<div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
+    <div class="container">
+        <div class="row g-4">
+            <!-- Logo and About -->
             <div class="col-md-6 col-lg-4">
-                
-                    <!-- Logo Image -->
-                    <a href="index">
-                        <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
-                    </a>
-                <p class="mb-4">
-                    Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
+                <a href="index">
+                    <img src="img/logo.jpg" alt="Polarhomes Logo" class="img-fluid mb-3" style="max-width: 120px;">
+                </a>
+                <p class="mb-2">
+                    Welcome to <strong>Polar homes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya.
                 </p>
-               
             </div>
-            <div class="col-md-6 col-lg-3">
-                <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+
+            <!-- Contact Info -->
+            <div class="col-md-6 col-lg-4">
+                <h6 class="text-primary text-uppercase mb-3">Contact</h6>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-2"></i>Kenya, Nairobi, Syokimau</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-2"></i>+254 723 225 791</p>
+                <p class="mb-2"><i class="fa fa-envelope me-2"></i>polarhomes.com</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social me-1" href="#"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
-            <div class="col-lg-5 col-md-12">
-                <div class="row gy-5 g-4">
-                    <div class="col-md-6">
-                        <h6 class="section-title text-start text-primary text-uppercase mb-4">Services</h6>
-                        <a class="btn btn-link" href="">Food & Restaurant</a>
-                        <a class="btn btn-link" href="">Spa & Fitness</a>
-                        <a class="btn btn-link" href="">Sports & Gaming</a>
-                        <a class="btn btn-link" href="">Event & Party</a>
-                        <a class="btn btn-link" href="">GYM & Yoga</a>
-                    </div>
+
+            <!-- Services -->
+            <div class="col-lg-4 col-md-12">
+                <h6 class="text-primary text-uppercase mb-3">Services</h6>
+                <div class="d-flex flex-column">
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Food & Restaurant</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Spa & Fitness</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Sports & Gaming</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Event & Party</a>
+                    <a class="btn btn-link text-light text-start p-0" href="#">GYM & Yoga</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="copyright">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Polarhomes</a>, All Right Reserved. 
-                    Designed By <a class="border-bottom" href="https://antocapteknologies.com">Antocap Teknologies</a>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <div class="footer-menu">
-                        <a href="index">Home</a>
-                        <a href="contact">Help</a>
-                    </div>
-                </div>
+
+    <!-- Footer Bottom -->
+    <div class="container border-top mt-3 pt-2">
+        <div class="row align-items-center">
+            <div class="col-md-6 text-center text-md-start small">
+                &copy; <a class="text-decoration-none text-light" href="#">Polar homes</a>, All Rights Reserved. 
+                Designed by <a class="text-decoration-none text-primary" href="https://antocapteknologies.com">Antocap Teknologies</a>
+            </div>
+            <div class="col-md-6 text-center text-md-end small">
+                <a class="text-light me-3" href="index">Home</a>
+                <a class="text-light" href="contact">Help</a>
             </div>
         </div>
     </div>
