--- a/booking.html
+++ b/booking.html
@@ -80,7 +80,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -171,7 +171,6 @@
                                         <option selected>Adult</option>
                                         <option value="1">Adult 1</option>
                                         <option value="2">Adult 2</option>
-                                        <option value="3">Adult 3</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
@@ -179,7 +178,6 @@
                                         <option selected>Child</option>
                                         <option value="1">Child 1</option>
                                         <option value="2">Child 2</option>
-                                        <option value="3">Child 3</option>
                                     </select>
                                 </div>
                             </div>
@@ -220,73 +218,71 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                            <form>
-                                <div class="row g-3">
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                            <label for="name">Your Name</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                            <label for="email">Your Email</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating date" id="date3" data-target-input="nearest">
-                                            <input type="text" class="form-control datetimepicker-input" id="checkin" placeholder="Check In" data-target="#date3" data-toggle="datetimepicker" />
-                                            <label for="checkin">Check In</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating date" id="date4" data-target-input="nearest">
-                                            <input type="text" class="form-control datetimepicker-input" id="checkout" placeholder="Check Out" data-target="#date4" data-toggle="datetimepicker" />
-                                            <label for="checkout">Check Out</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <select class="form-select" id="select1">
-                                              <option value="1">Adult 1</option>
-                                              <option value="2">Adult 2</option>
-                                              <option value="3">Adult 3</option>
-                                            </select>
-                                            <label for="select1">Select Adult</label>
-                                          </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-floating">
-                                            <select class="form-select" id="select2">
-                                              <option value="1">Child 1</option>
-                                              <option value="2">Child 2</option>
-                                              <option value="3">Child 3</option>
-                                            </select>
-                                            <label for="select2">Select Child</label>
-                                          </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <select class="form-select" id="select3">
-                                              <option value="1">Room 1</option>
-                                              <option value="2">Room 2</option>
-                                              <option value="3">Room 3</option>
-                                            </select>
-                                            <label for="select3">Select A Room</label>
-                                          </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <div class="form-floating">
-                                            <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
-                                            <label for="message">Special Request</label>
-                                        </div>
-                                    </div>
-                                    <div class="col-12">
-                                        <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
-                                    </div>
-                                </div>
-                            </form>
+                           <form action="https://formspree.io/f/yourFormID" method="POST">
+    <div class="row g-3">
+        <div class="col-md-6">
+            <div class="form-floating">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
+                <label for="name">Your Name</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-floating">
+                <input type="email" class="form-control" id="email" name="_replyto" placeholder="Your Email">
+                <label for="email">Your Email</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-floating date">
+                <input type="text" class="form-control datetimepicker-input" id="checkin" name="checkin" placeholder="Check In">
+                <label for="checkin">Check In</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-floating date">
+                <input type="text" class="form-control datetimepicker-input" id="checkout" name="checkout" placeholder="Check Out">
+                <label for="checkout">Check Out</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-floating">
+                <select class="form-select" id="select1" name="adults">
+                    <option value="1">Adult 1</option>
+                    <option value="2">Adult 2</option>
+                </select>
+                <label for="select1">Select Adult</label>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-floating">
+                <select class="form-select" id="select2" name="children">
+                    <option value="1">Child 1</option>
+                    <option value="2">Child 2</option>
+                </select>
+                <label for="select2">Select Child</label>
+            </div>
+        </div>
+        <div class="col-12">
+            <div class="form-floating">
+                <select class="form-select" id="select3" name="room_type">
+                    <option value="Studio Executive suite">Studio Executive suite</option>
+                    <option value="One Bedroom suite">One Bedroom suite</option>
+                    <option value="4 Bedroom suite">4 Bedroom suite</option>
+                </select>
+                <label for="select3">Select A Room</label>
+            </div>
+        </div>
+        <div class="col-12">
+            <div class="form-floating">
+                <textarea class="form-control" placeholder="Special Request" id="message" name="message" style="height: 100px"></textarea>
+                <label for="message">Special Request</label>
+            </div>
+        </div>
+        <div class="col-12">
+            <button class="btn btn-primary w-100 py-3" type="submit">Book Now</button>
+        </div>
+    </div>
+</form>
                         </div>
                     </div>
                 </div>
