--- a/room-details.html
+++ b/room-details.html
@@ -51,17 +51,17 @@
             <h1 class="m-0 fancy-text ms-2">PH</h1>
         </div>
 
-        <!-- Contact & Social Links -->
+             <!-- Contact & Social Links -->
         <div class="col-lg-9">
             <div class="row gx-0 bg-white d-none d-lg-flex">
                 <div class="col-lg-7 px-5 text-start">
                     <div class="h-100 d-inline-flex align-items-center py-2 me-4">
                         <i class="fa fa-envelope text-primary me-2"></i>
-                        <p class="mb-0">polarhomes@gmail.com</p>
+                        <p class="mb-0">lindahmiriza@gmail.com </p>
                     </div>
                     <div class="h-100 d-inline-flex align-items-center py-2">
                         <i class="fa fa-phone-alt text-primary me-2"></i>
-                        <p class="mb-0">+012 345 6789</p>
+                        <p class="mb-0">+254 723 225 791</p>
                     </div>
                 </div>
                 <div class="col-lg-5 px-5 text-end">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-
+            
           <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
