--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="team" class="dropdown-item">Our Team</a>
                     <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
             </div>
@@ -156,8 +155,8 @@
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Scenic Locations</h6>
                         <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Nairobi’s Best Attractions</h1>
-                        <a href="location" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Explore Location</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
+                        <a href="contact" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
+                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
                     </div>
                 </div>
             </div>
@@ -167,8 +166,8 @@
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Elegant Interiors</h6>
                         <h1 class="display-3 text-white mb-4 animated slideInDown">Enjoy a Stylish and Cozy Experience</h1>
-                        <a href="gallery" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Gallery</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Your Stay</a>
+                        <a href="service" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Services</a>
+                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book Your Stay</a>
                     </div>
                 </div>
             </div>
@@ -178,8 +177,8 @@
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Premium Comfort</h6>
                         <h1 class="display-3 text-white mb-4 animated slideInDown">Modern Amenities for a Perfect Stay</h1>
-                        <a href="amenities" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Amenities</a>
-                        <a href="book" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Check Availability</a>
+                        <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">View Amenities</a>
+                        <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Check Availability</a>
                     </div>
                 </div>
             </div>
