--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <!-- Logo & Brand Name -->
         <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
             <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2">PH</h1>
+            <h1 class="m-0 fancy-text ms-2"></h1>
         </div>
 
         <!-- Contact & Social Links -->
@@ -275,7 +275,7 @@
                 </ul>
             </div>
             <div class="col-lg-6">
-                <img class="img-fluid rounded wow zoomIn about-image-location" data-wow-delay="0.3s" src="img/location.jpg">
+                <img class="img-fluid rounded wow zoomIn about-image-location" data-wow-delay="0.3s" src="img/about-image-4.jpg">
             </div>
         </div>
 
