--- a/service.html
+++ b/service.html
@@ -171,15 +171,12 @@
                                         <option selected>Adult</option>
                                         <option value="1">Adult 1</option>
                                         <option value="2">Adult 2</option>
-                                        <option value="3">Adult 3</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
                                     <select class="form-select">
                                         <option selected>Child</option>
                                         <option value="1">Child 1</option>
-                                        <option value="2">Child 2</option>
-                                        <option value="3">Child 3</option>
                                     </select>
                                 </div>
                             </div>
@@ -220,8 +217,8 @@
                             <i class="fa fa-utensils fa-2x text-primary"></i>
                         </div>
                     </div>
-                    <h5 class="mb-3">Food & Restaurant</h5>
-                    <p class="text-body mb-0">Savor exquisite dining experiences with our in-house restaurant. From delectable local dishes to international cuisines, our chefs are dedicated to offering you a gourmet experience like no other.</p>
+                    <h5 class="mb-3">Starter kit</h5>
+                    <p class="text-body mb-0">Savor exquisite dining experiences with our in-house restaurant. Delectable local breakfast to, our chefs are dedicated to offering you a gourmet experience like no other.</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
