--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
                 <h6 class="section-title text-start text-white text-uppercase mb-3">Luxury Living</h6>
                 <h1 class="text-white mb-4">Discover The Epitome of Luxurious Stay</h1>
                 <p class="text-white mb-4">Experience unparalleled comfort and elegance with our exclusive range of rooms. From cozy getaways to extravagant suites, we offer the perfect accommodation to suit your needs. Indulge in luxury, serenity, and world-class service like never before.</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Explore Our Rooms</a>
-                <a href="" class="btn btn-light py-md-3 px-md-5">Book Your Stay</a>
+                <a href="room" class="btn btn-primary py-md-3 px-md-5 me-3">Explore Our Rooms</a>
+                <a href="booking" class="btn btn-light py-md-3 px-md-5">Book Your Stay</a>
             </div>
         </div>
         <div class="col-md-6">
@@ -500,7 +500,7 @@
         </div>
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-hotel fa-2x text-primary"></i>
@@ -511,7 +511,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-utensils fa-2x text-primary"></i>
@@ -522,7 +522,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-spa fa-2x text-primary"></i>
@@ -533,7 +533,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-swimmer fa-2x text-primary"></i>
@@ -544,7 +544,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-glass-cheers fa-2x text-primary"></i>
@@ -555,7 +555,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded"
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-dumbbell fa-2x text-primary"></i>
