--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
         <!-- Logo & Brand Name -->
         <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
             <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2">PH</h1>
+            <h1 class="m-0 fancy-text ms-2"></h1>
         </div>
 
            <!-- Contact & Social Links -->
@@ -97,7 +97,6 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="team" class="dropdown-item">Our Team</a>
                     <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
             </div>
@@ -169,14 +168,14 @@
                                 <div class="col-md-3">
                                     <select class="form-select">
                                         <option selected>Adult</option>
-                                        <option value="1">Adult 1</option>
-                                        <option value="2">Adult 2</option>
+                                        <option value="1">1 person</option>
+                                        <option value="2">2 people</option>
                                     </select>
                                 </div>
                                 <div class="col-md-3">
                                     <select class="form-select">
                                         <option selected>Child</option>
-                                        <option value="1">Child 1</option>
+                                        <option value="1">1 Child</option>
                                     </select>
                                 </div>
                             </div>
@@ -200,7 +199,7 @@
         </div>
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-hotel fa-2x text-primary"></i>
@@ -211,7 +210,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-utensils fa-2x text-primary"></i>
@@ -233,7 +232,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-swimmer fa-2x text-primary"></i>
@@ -244,7 +243,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-glass-cheers fa-2x text-primary"></i>
@@ -255,7 +254,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <a class="service-item rounded" href="">
+                <a class="service-item rounded">
                     <div class="service-icon bg-transparent border rounded p-1">
                         <div class="w-100 h-100 border rounded d-flex align-items-center justify-content-center">
                             <i class="fa fa-dumbbell fa-2x text-primary"></i>
