--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                         <p class="text-body mb-3">Perfect for solo travelers or couples, our Executive Studio provides elegant comfort with all essential amenities.</p>
                         <div class="d-flex justify-content-between">
                             <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=studio">View Details</a>
-                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/booking">Book Now</a>
+                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking">Book Now</a>
                         </div>
                     </div>
                 </div>
@@ -407,11 +407,44 @@
                         <p class="text-body mb-3">Enjoy more space in our 1 Bedroom Suite, ideal for business or extended stays, with a separate lounge and modern kitchen.</p>
                         <div class="d-flex justify-content-between">
                             <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=executive">View Details</a>
-                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/booking">Book Now</a>
+                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking">Book Now</a>
                         </div>
                     </div>
                 </div>
             </div>
+
+		<!-- 2 Bedroom -->
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+    <div class="room-item shadow rounded overflow-hidden">
+        <div class="position-relative">
+            <img class="img-fluid" src="img/two-bedroom.jpg" alt="2 Bedroom Suite">
+            <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">$70/Night</small>
+        </div>
+        <div class="p-4 mt-2">
+            <div class="d-flex justify-content-between mb-3">
+                <h5 class="mb-0">2 Bedroom Suite</h5>
+                <div class="ps-2">
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                </div>
+            </div>
+            <div class="d-flex mb-3">
+                <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>2 Beds</small>
+                <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>2 Baths</small>
+                <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
+            </div>
+            <p class="text-body mb-3">Spacious and stylish, our 2 Bedroom Suite is ideal for small families or friends traveling together, complete with living and kitchen areas.</p>
+            <div class="d-flex justify-content-between">
+                <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=2bedroom">View Details</a>
+                <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking">Book Now</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 
             <!-- 4 Bedroom -->
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
@@ -439,7 +472,7 @@
                         <p class="text-body mb-3">The 4 Bedroom Villa is designed for families or groups, with expansive space, private garden, and fully equipped kitchen.</p>
                         <div class="d-flex justify-content-between">
                             <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=4bedroom">View Details</a>
-                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/booking">Book Now</a>
+                            <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking">Book Now</a>
                         </div>
                     </div>
                 </div>
