--- a/booking.html
+++ b/booking.html
@@ -48,7 +48,7 @@
         <!-- Logo & Brand Name -->
         <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
             <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2">PH</h1>
+            <h1 class="m-0 fancy-text ms-2"></h1>
         </div>
 
          <!-- Contact & Social Links -->
@@ -97,7 +97,6 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="team" class="dropdown-item">Our Team</a>
                     <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
             </div>
@@ -151,7 +150,7 @@
 <!-- Booking Start -->
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
-        <form action="https://formspree.io/f/yourFormID" method="POST">
+        <form action="https://formspree.io/f/xkgryeaa" method="POST">
             <div class="bg-white shadow" style="padding: 35px;">
                 <div class="row g-2">
                     <div class="col-md-10">
@@ -173,14 +172,14 @@
                             <div class="col-md-3">
                                 <select class="form-select" name="adults">
                                     <option selected disabled>Adult</option>
-                                    <option value="1">Adult 1</option>
-                                    <option value="2">Adult 2</option>
+                                    <option value="1">1 Person</option>
+                                    <option value="2">2 People</option>
                                 </select>
                             </div>
                             <div class="col-md-3">
                                 <select class="form-select" name="children">
                                     <option selected disabled>Child</option>
-                                    <option value="1">Child 1</option>
+                                    <option value="1">1 Child</option>
                                 </select>
                             </div>
                         </div>
@@ -222,7 +221,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                           <form action="https://formspree.io/f/yourFormID" method="POST">
+                           <form action="https://formspree.io/f/xkgryeaa" method="POST">
     <div class="row g-3">
         <div class="col-md-6">
             <div class="form-floating">
@@ -251,8 +250,8 @@
         <div class="col-md-6">
             <div class="form-floating">
                 <select class="form-select" id="select1" name="adults">
-                    <option value="1">Adult 1</option>
-                    <option value="2">Adult 2</option>
+                    <option value="1">1 Person</option>
+                    <option value="2">2 People</option>
                 </select>
                 <label for="select1">Select Adult</label>
             </div>
@@ -260,8 +259,7 @@
         <div class="col-md-6">
             <div class="form-floating">
                 <select class="form-select" id="select2" name="children">
-                    <option value="1">Child 1</option>
-                    <option value="2">Child 2</option>
+                    <option value="1">1 Child</option>
                 </select>
                 <label for="select2">Select Child</label>
             </div>
@@ -271,7 +269,8 @@
                 <select class="form-select" id="select3" name="room_type">
                     <option value="Studio Executive suite">Studio Executive suite</option>
                     <option value="One Bedroom suite">One Bedroom suite</option>
-                    <option value="4 Bedroom suite">4 Bedroom suite</option>
+                    <option value="Two Bedroom suite">Two Bedroom suite</option>
+                    <option value="4 Bedroom suite">4 Bedroom Villa</option>
                 </select>
                 <label for="select3">Select A Room</label>
             </div>
