--- a/room-details.html
+++ b/room-details.html
@@ -274,11 +274,11 @@
             <div class="col-lg-4 col-md-12">
                 <h6 class="text-primary text-uppercase mb-3">Services</h6>
                 <div class="d-flex flex-column">
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Food & Restaurant</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Spa & Fitness</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Sports & Gaming</a>
-                    <a class="btn btn-link text-light text-start p-0 mb-1" href="#">Event & Party</a>
-                    <a class="btn btn-link text-light text-start p-0" href="#">GYM & Yoga</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Food & Restaurant</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Spa & Fitness</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Sports & Gaming</a>
+                    <a class="btn btn-link text-light text-start p-0 mb-1" href="service">Event & Party</a>
+                    <a class="btn btn-link text-light text-start p-0" href="service">GYM & Yoga</a>
                 </div>
             </div>
         </div>
