--- a/room.html
+++ b/room.html
@@ -48,7 +48,7 @@
         <!-- Logo & Brand Name -->
         <div class="col-lg-3 bg-dark d-none d-lg-flex align-items-center justify-content-start px-4">
             <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-            <h1 class="m-0 fancy-text ms-2">PH</h1>
+            <h1 class="m-0 fancy-text ms-2"></h1>
         </div>
 
            <!-- Contact & Social Links -->
@@ -80,7 +80,7 @@
     <!-- Mobile & Tablet Logo (Hidden on large screens) -->
     <a href="index" class="navbar-brand d-flex align-items-center d-lg-none">
         <img src="img/logo.jpg" alt="Polarhomes Logo" class="logo-img">
-        <h1 class="m-0 fancy-text ms-2">PH</h1>
+        <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
     <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -272,6 +272,38 @@
                     </div>
                 </div>
             </div>
+
+				<!-- 2 Bedroom -->
+<div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+    <div class="room-item shadow rounded overflow-hidden">
+        <div class="position-relative">
+            <img class="img-fluid" src="img/two-bedroom.jpg" alt="2 Bedroom Suite">
+            <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">$70/Night</small>
+        </div>
+        <div class="p-4 mt-2">
+            <div class="d-flex justify-content-between mb-3">
+                <h5 class="mb-0">2 Bedroom Suite</h5>
+                <div class="ps-2">
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                    <small class="fa fa-star text-primary"></small>
+                </div>
+            </div>
+            <div class="d-flex mb-3">
+                <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>2 Beds</small>
+                <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>2 Baths</small>
+                <small><i class="fa fa-wifi text-primary me-2"></i>Wifi</small>
+            </div>
+            <p class="text-body mb-3">Spacious and stylish, our 2 Bedroom Suite is ideal for small families or friends traveling together, complete with living and kitchen areas.</p>
+            <div class="d-flex justify-content-between">
+                <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=2bedroom">View Details</a>
+                <a class="btn btn-sm btn-dark rounded py-2 px-4" href="booking">Book Now</a>
+            </div>
+        </div>
+    </div>
+</div>
 
             <!-- 4 Bedroom -->
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
