--- a/testimonial.html
+++ b/testimonial.html
@@ -3,24 +3,42 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || Testimonials and reviews </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA">
+    <meta name="description" content="Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
+    <meta name="keywords" content="Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/reviews">
+    <meta property="og:title" content="Polarhomes | Trusted Guest Reviews near JKIA & Nairobi Expressway">
+    <meta property="og:description" content="Discover why travelers love Polarhomes! Authentic reviews from happy Airbnb guests staying near JKIA Airport and Nairobi Expressway.">
+    <meta property="og:image" content="https://yourdomain.com/images/review-preview.jpg">
+
+    <!-- Twitter Meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/reviews">
+    <meta name="twitter:title" content="Polarhomes | Airbnb Testimonials & Guest Experiences in Nairobi">
+    <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Clean, secure, and cozy.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/review-preview.jpg">
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icon Font Stylesheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Libraries Stylesheets -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
