--- a/room-details.html
+++ b/room-details.html
@@ -3,24 +3,42 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || room details </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Polarhomes | Room Details | Airbnb in Syokimau near JKIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- SEO Meta Tags -->
+    <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
+    <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
+    <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/room-details">
+    <meta property="og:title" content="Polarhomes | Room Details | Cozy Airbnb Stay near JKIA">
+    <meta property="og:description" content="Get all the details on our comfortable and secure Airbnb rooms at Polarhomes. Located in Syokimau near JKIA and Nairobi Expressway. View photos, amenities, and book now.">
+    <meta property="og:image" content="https://yourdomain.com/images/room-preview.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/room-details">
+    <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
+    <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/room-preview.jpg">
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icon Font Stylesheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Libraries Stylesheets -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
